# archiver

./: CMakeLists.txt
core/include/: AString.h  Archiver.h  ArithmeticCoding.h  BWT.h  DataInfo.h  ECoders.h  HuffmanCoding.h  HuffmanTree.h  IDataEncoder.h  IFC.h  MTF.h  RLE.h  RLE2.h  Reader.h  SuffixSort.h  Symbol.h  Writer.h  mchar.h
core/src/: AString.cpp  Archiver.cpp  ArithmeticCoding.cpp  BWT.cpp  DataInfo.cpp  HuffmanCoding.cpp  HuffmanTree.cpp  IFC.cpp  MTF.cpp  RLE.cpp  RLE2.cpp  Reader.cpp  SuffixSort.cpp  Writer.cpp  main.cpp
include/: AString.h  Archiver.h  BWT.h  DataInfo.h  HuffmanCoding.h  HuffmanTree.h  MTF.h  Reader.h  String.h  SuffixSort.h  Symbol.h  Writer.h  byteTranssform.h
src/: AString.cpp  Archiver.cpp  BWT.cpp  DataInfo.cpp  HuffmanCoding.cpp  HuffmanTree.cpp  MTF.cpp  Reader.cpp  String.cpp  SuffixSort.cpp  Symbol.cpp  Writer.cpp  byteTranssform.cpp  main.cpp
tests/: CMakeLists.txt  TestArchiver.cpp  TestArithmeticCoding.cpp  TestBWT.cpp  TestDataInfo.cpp  TestHuffmanTree.cpp  TestIFC.cpp  TestMTF.cpp  TestRLE.cpp  TestRLE2.cpp  TestReaderWriter.cpp  TestString.cpp  TestSuffixSort.cpp  TestSymbol.cpp  test.cpp
ui/include/: ConsoleUI.h
ui/src/: ConsoleUI.cpp
